Added GetEmployeeList API

--- a/EmployeeAdminPortalAPI/EmployeeAdminPortalAPI/appsettings.json
+++ b/EmployeeAdminPortalAPI/EmployeeAdminPortalAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EmployeeAdminPortalDb": "Data Source=localhost;Database=EmployeeAdminPortal;User ID=SA;Password=Word_1234;"
+  }
 }
